assets/css/smallscreen.css
/* ... */
/* for the device with width greater than 482 */
@media screen and (min-width: 474px) {
  .image-placeholder .teck-stacks {
    margin-top: 12px;
    margin-bottom: 0;
  }

  .recent-works .work-card {
    height: 313px;
  }
}

@media screen and (min-width: 478px) {
  .image-placeholder .teck-stacks {
    height: 6vh;
    margin-top: 12px;
    margin-bottom: 12px;
  }

  .recent-works .work-card {
    /* padding: 0 24px 30px 24px; */
    height: 323px;
  }
}

/* for the device with width lower than 360 */
@media screen and (max-width: 360px) {
  .hero {
    height: 100%;
    padding: 120px 30px 90px 25px;
    background-size: 20.4vh;
    background-position-y: 270px;
  }

  .recent-works .work-card {
    padding: 0 24px 30px 24px;
    height: 358px;
  }
}

@media screen and (max-width: 375px) {
  .mobile-icon-menu {
    top: 20px;
  }

  .recent-works .work-card {
    height: 348px;
  }
}

/* =========================== only on iphone 5 s/SE ===================== */
@media screen and (max-device-width: 320px) {
  .hero {
    height: 90vh;
    padding: 70px 30px 0 25px;
    background-size: 23vh;
    background-position-y: 240px;
  }

  .hero p {
    font-size: 16px;
  }
}

/* =========================== Only on iphone 6/7/8 =========================== */
@media screen and (min-width: 375px) {
  .hero {
    height: 82vh;
    padding: 134.5px 30px 0 25px;
    background-size: 27vh;
    background-position-y: 250px;
  }

  .hero p {
    font-size: 24.3px;
  }
}

/* in very smallest device */
@media screen and (max-width: 261px) {
  .recent-work .title {
    font-size: 20px;
  }
}

/* ============================= only on pexel 2 XL ============== */
@media screen and (min-width: 411px) {
  .hero {
    height: 100%;
    padding: 150px 30px 100px 25px;
    background-size: 24.4vh;
    background-position-y: 200px;
  }

  .hero p {
    font-size: 22.3px;
    line-height: 35px;
  }

  .recent-works .work-card {
    height: 358px;
  }
}

@media screen and (min-width: 411px) and (max-device-width: 823px) {
  .hero {
    height: 100%;
    padding: 140px 30px 100px 25px;
    background-size: 24.4vh;
    background-position-y: 290px;
  }

  .hero p {
    font-size: 22.3px;
    line-height: 35px;
  }

  .recent-works .work-card {
    height: 358px;
  }
}

/* =================================== for iPad  pro======================== */
@media (min-device-height: 1024px) and (max-device-width: 1366px) {
  .hero {
    padding: 200px 34px 120px 35px;
    background-size: 20vh;
    background-position-y: 340px;
  }

  .hero h1 {
    letter-spacing: 0.17px;
    color: #ff6b00;
  }

  .hero h5 {
    margin-top: 23px;
    font-size: 5vw;
    margin-bottom: 0;
    color: #fff;
    line-height: 32px;
  }

  .hero p {
    line-height: 50px;
    font-size: 33.3px;
  }

  ul.link-container li.link-item a {
    font-size: 40px;
  }
}

@media screen and (min-width: 488px) {
  .recent-works .work-card {
    height: 399px;
  }
}

@media screen and (min-width: 432px) {
  .recent-works .work-card {
    height: 310px;
  }
}

